@startuml

title __GETRAENKEPARADIES's Class Diagram__\n

  namespace Getraenkeparadies {
    class Getraenkeparadies.Apfelsaft {
        - klar : boolean
        - trueb : boolean
        + Apfelsaft()
        + geschuettelt()
        + isKlar()
        + isTrueb()
        + setKlar()
        + setTrueb()
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Getraenk {
        - Volumen : double
        + Getraenk()
        + getVolumen()
        + setVolumen()
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Kiwisaft {
        + Kiwisaft()
        + geschuettelt()
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Saft {
        - fruchtfleisch : boolean
        + Saft()
        + geschuettelt()
        + isFruchtfleisch()
        + setFruchtfleisch()
    }
  }
  

  namespace Getraenkeparadies {
    interface Getraenkeparadies.Schuetteln {
        {abstract} + geschuettelt()
    }
  }
  

  namespace Getraenkeparadies {
    abstract class Getraenkeparadies.Spirituose {
        - alkoholgehalt : int
        + Spirituose()
        + getAlkoholgehalt()
        + setAlkoholgehalt()
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Tequilla {
        - goldenen : boolean
        - silbernen : boolean
        + Tequilla()
        + isGoldenen()
        + isSilbernen()
        + setGoldenen()
        + setSilbernen()
    }
  }
  

  namespace Getraenkeparadies {
    class Getraenkeparadies.Wodka {
        - aromaName : String
        + Wodka()
        + geschuettelt()
        + getAromaName()
        + setAromaName()
    }
  }
  

  Getraenkeparadies.Apfelsaft -up-|> Getraenkeparadies.Saft
  Getraenkeparadies.Kiwisaft -up-|> Getraenkeparadies.Saft
  Getraenkeparadies.Saft .up.|> Getraenkeparadies.Schuetteln
  Getraenkeparadies.Saft -up-|> Getraenkeparadies.Getraenk
  Getraenkeparadies.Spirituose -up-|> Getraenkeparadies.Getraenk
  Getraenkeparadies.Tequilla -up-|> Getraenkeparadies.Spirituose
  Getraenkeparadies.Wodka .up.|> Getraenkeparadies.Schuetteln
  Getraenkeparadies.Wodka -up-|> Getraenkeparadies.Spirituose


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
